# TransRecon

./: README.MD
real/capture/: CMakeLists.txt  Directory.h  ImageCapture.cpp  ImageCapture.h  ImageDisplay.cpp  ImageDisplay.h  Util.h  main.cpp
real/matting/: EMPixelCorrespBasedOnGray.m  EMXCompAlphaMatte.m  EMXGenAlphaMatting.m  EMXGenGrayPattern.m  Main.m  MainClean.m
real/rotation/: main.cpp
synthetic/POV-Ray/: alpha_matting.ini  alpha_matting.pov  bunny.inc  calib.ini  calib.pov  kitten.inc  ray_ray_corresp.ini  ray_ray_corresp.pov
synthetic/matlab/: EMCompAlphaMatte.m  EMGenAlphaMatting.m  EMGenGrayPattern.m  EMParameters.m  EMPixelCorrespBasedOnGray.m  Main.m
